--- a/Session01/src/main/resources/application.properties
+++ b/Session01/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=Session01
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/Session01_web_service?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=218205
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+management.endpoints.web.exposure.include=health,info,metrics
